--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <!-- Search Bar  -->
     <div class="search-bar">
       <input type="text" name="search" id="search" 
-      placeholder="Type and press enter to search..."/>
+      placeholder="Type and press enter to search"/>
     </div>
     <!-- News Display Area -->
             <ul id="news-articles"></ul>
