--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 
-<body>
+<body onload="start()">
     <!-- Main Header section and toggle key -->
             <div class="mainheading">NEWS AGGREGATOR</div>  
             <div class="toggletxt">Toggle to Lite Mode</div>  
